Done Show Public View

--- a/.env
+++ b/.env
@@ -16,3 +16,11 @@ VITE_GOOGLE_CLIENT_SECRET=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
 # URL ของโฟลเดอร์ Google Drive ที่ต้องการให้ผู้ใช้เข้าถึง
 # ตัวอย่าง: https://drive.google.com/drive/folders/1abc...xyz
 VITE_GOOGLE_DRIVE_URL=https://drive.google.com/drive/folders/1eLeKxe0QNZvzneFs_ZpP7YJIIMV-nlvD?usp=sharing
+
+# Google API Key (for public access to Google Drive)
+# 1. ไปที่ https://console.cloud.google.com/
+# 2. เปิดใช้งาน Google Drive API
+# 3. สร้าง API Key ใน Credentials
+# 4. จำกัด API Key ให้ใช้ได้เฉพาะ Google Drive API
+# 5. เพิ่ม HTTP referrers restrictions ถ้าต้องการ
+VITE_GOOGLE_API_KEY=AIzaSyAtgcLcKTEt8Z5JnQVvJPtbAbULNagAwwA
