--- a/nginx.conf
+++ b/nginx.conf
@@ -13,24 +13,17 @@ server {
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Content-Type-Options "nosniff";
 
+    # Main location block for SPA
     location / {
         try_files $uri $uri/ /index.html;
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
     }
 
     # Cache static assets
     location /assets/ {
         expires 1y;
         add_header Cache-Control "public, no-transform";
-    }
-
-    # Handle API requests
-    location /api/ {
-        proxy_pass http://backend:3000/;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+        try_files $uri =404;
     }
 
     # Error pages
@@ -39,4 +32,4 @@ server {
     location = /50x.html {
         root /usr/share/nginx/html;
     }
-} 
+}
