--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - NODE_ENV=production
       - VITE_API_URL=http://localhost/api
     restart: unless-stopped
+    privileged: true
     networks:
       - app-network
 
