--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,15 @@
+version: '3.8'
+
 services:
   frontend:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     ports:
-      - "80:8000"
+      - "80:8080"
     environment:
-      - NODE_ENV=production
-      - VITE_API_URL=http://localhost/api
+      - VITE_GOOGLE_CLIENT_ID=${VITE_GOOGLE_CLIENT_ID}
+      - VITE_GOOGLE_CLIENT_SECRET=${VITE_GOOGLE_CLIENT_SECRET}
+      - VITE_GOOGLE_DRIVE_URL=${VITE_GOOGLE_DRIVE_URL}
+      - VITE_GOOGLE_API_KEY=${VITE_GOOGLE_API_KEY}
     restart: unless-stopped
-    privileged: true
-    networks:
-      - app-network
-
-networks:
-  app-network:
-    driver: bridge
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
