--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,7 @@ http {
     default_type  application/octet-stream;
     
     # Use /tmp for pid file (writable by non-root user)
-    pid /tmp/nginx.pid;
+    #pid /tmp/nginx.pid;
     
     # Logging
     access_log /var/log/nginx/access.log;
